# socratic-study-mentor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  TESTING.html  TODO.md  agent-install.html  architecture-c4.html  architecture.html  artefacts.html  audhd-framework.html  audhd-learning-philosophy.html  brainstorm-v1.4-features.html  cli-reference.html  cliff.toml  codebase-review-2026-04-08.html  content-pipeline.html  contributing.html  index.html  mcp.html  mkdocs.yml  network-bridges.html  plan-v1.4-features.html  pyproject.toml  remediation-log-2026-04-08.html  roadmap.html  session-protocol.html  setup-guide.html  sitemap.xml  socratic-engine.html  system-overview.html  tui-guide.html  voice-output.html  web-ui-guide.html
Formula/: studyctl.rb
agents/: manifest.json
analysis/: phase9-spec-analysis.html
architecture/: system-overview.html
artefacts/: audio_overview.m4a  index.html
brainstorms/: 2026-03-15-native-app-brainstorm.html  2026-03-15-native-app-repackaging-brainstorm.html  2026-03-15-unified-study-platform-brainstorm.html  2026-03-28-live-study-session-dashboard-brainstorm.html  2026-03-29-unified-session-architecture-brainstorm.html  2026-04-01-test-consolidation-tdd-foundation-brainstorm.html
docs/: TESTING.md  agent-install.md  architecture-c4.md  artefacts.md  audhd-framework.md  audhd-learning-philosophy.md  ci-cd-pipeline.md  cli-reference.md  content-pipeline.md  index.md  roadmap.md  session-protocol.md  setup-guide.md  system-overview.md  tui-guide.md  voice-output.md  web-ui-guide.md
handoff/: 2026-04-03-session-handoff.html
javascripts/: preferences.js
plans/: 2026-03-08-test-comprehensive-coverage-plan.html  2026-03-15-consistency-review.html  2026-03-15-feat-tui-polish-documentation-plan.html  2026-03-15-feat-unified-study-platform-plan.html  2026-04-05-persona-eval-implementation-plan.html  2026-04-05-persona-optimisation-tier2-design.html  2026-04-06-feat-autoresearch-persona-optimizer-loop-plan.html  2026-04-06-session-handoff.html
research/: 2026-03-15-acp-research.html  click-cli-patterns.html  (+13 more)
(+80 files in other folders)
