[project]
name = "socratic-study-mentor"
version = "1.0.0"
description = "AuDHD-aware Socratic study mentor with AI session management"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{name = "Andy Taylor"}]
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["packages/agent-session-tools/tests", "packages/studyctl/tests"]
addopts = "--import-mode=importlib"
