[project]
name = "socratic-study-mentor"
version = "1.0.0"
description = "AuDHD-aware Socratic study mentor with AI session management"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [{name = "Andy Taylor"}]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # Workspace root — no packages to install here

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["studyctl", "agent_session_tools"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["packages/agent-session-tools/tests", "packages/studyctl/tests"]
addopts = "--import-mode=importlib"
markers = [
    "integration: requires external infrastructure (tmux, real DB, network)",
]
